<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical" >
    
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/input_name"
        android:textColor="@color/gold"
        android:textSize="12sp" />
	
    <EditText
        android:id="@+id/edit_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name_hint"
        android:inputType="textNoSuggestions"
        android:singleLine="true" />
    
    <TextView
        android:id="@+id/harmonics"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#FF0000"
        android:textIsSelectable="true"
        android:textSize="16sp" />
    
    <View
        android:layout_height="1px"
        android:layout_width="match_parent"
        android:background="@color/divider" />
    
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_heading"
        android:textColor="@color/gold"
        android:textSize="12sp" />
     
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
    
        <TextView
            android:id="@+id/harmonic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/gold"
            android:textIsSelectable="true"
            android:textSize="22sp"
            android:layout_weight="0" />

        <EditText
            android:id="@+id/weight"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/weight_hint"
            android:inputType="numberDecimal"
            android:textSize="22sp"
            android:layout_weight="1" />
         
        
        <Button
            android:id="@+id/set_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="nextWeight"
            android:text="@string/set"
            android:textStyle="italic"
            android:layout_weight="0"
            style="?android:attr/buttonBarButtonStyle" />
	</LinearLayout>
	
	<View
        android:layout_height="1px"
        android:layout_width="match_parent"
        android:background="@color/divider" />
    
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal" >
	    
		<ListView
	        android:id="@android:id/list"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1" >
	    </ListView>
	    
	    <Button
		    android:id="@+id/clear_button"
		    android:layout_weight="0"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/clear"
	        android:onClick="clearWeight" 
	        android:textStyle="italic"
	        style="?android:attr/buttonBarButtonStyle" />
		    
			
	</LinearLayout>
	
 
</LinearLayout>
 
