<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_temp"
        android:gravity="center" />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
	    
	    <Button
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:layout_weight="1"
	        android:onClick="byRelationships"
	        android:text="@string/by_relationships"
	        android:textStyle="italic" />

	    <Button
	        android:layout_height="match_parent"
	        android:layout_width="0dp"
	        android:layout_weight="1"
	        android:text="@string/by_cents"
	        android:textStyle="italic"
	        android:onClick="byCents" />
	    
    </LinearLayout>
</LinearLayout>