<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:orientation="vertical" >
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" 
        android:layout_weight="2" >
        <Button
            android:id="@+id/mute"
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="handleMute" />
        <Button
            android:id="@+id/pitch_A"
            android:onClick="setPitchA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:textStyle="italic" />        
    </LinearLayout>
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="12sp" 
        android:textColor="@color/gold"
        android:paddingTop="20sp"
        android:text="@string/curr_temp" />
	<Button
        android:id="@+id/temperament"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp" 
        android:layout_weight="2"
        android:onClick="seeTemperaments"
        android:singleLine="true"
        android:ellipsize="marquee" />
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20sp"
        android:textColor="@color/gold"
        android:textSize="12sp"
        android:text="@string/curr_wave" />
    <Button
        android:id="@+id/waveform"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp" 
        android:layout_weight="2"
        android:singleLine="true"
        android:ellipsize="marquee"
        android:onClick="seeWaveforms" />
    
    <TextView
        android:id="@+id/note_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20sp"
        android:textColor="@color/gold"
        android:textSize="12sp" />
    <TextView
        android:id="@+id/note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#FF0000"
        android:textSize="40sp"
        android:gravity="center"
        android:textIsSelectable="true"
        android:layout_weight="3"
        android:singleLine="true"
        android:scrollHorizontally="true" />
        
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="4" >
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" 
            android:text="@string/note_up"
            android:onClick="noteUp" />
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/octave_up"
            android:onClick="octaveUp" />
</LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="4"
        android:orientation="horizontal" >

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="noteDown"
            android:text="@string/note_down" />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="octaveDown"
            android:text="@string/octave_down" />
    </LinearLayout>
    
</LinearLayout>


