<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/input_name"
        android:textColor="@color/gold"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/edit_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name_hint"
        android:inputType="textNoSuggestions"
        android:paddingLeft="16dip"
        android:paddingRight="12dip"
        android:singleLine="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:baselineAligned="true"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:orientation="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rels"
                android:textColor="@color/gold"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/edit_rel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:editable="false"
                android:hint="@string/rel_hint"
                android:inputType="none"
                android:singleLine="true"
                android:textSize="22sp" />

            <ListView
                android:id="@android:id/list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingEnd="12dip"
                android:paddingStart="16dip" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical" >

            <Button
                android:id="@+id/new_detail"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:onClick="addDetail"
                android:textStyle="italic" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/divider" />

            <LinearLayout
                android:id="@+id/buttons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <Button
                    android:id="@+id/cancel"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:onClick="cancelEdit"
                    android:text="@string/cancel"
                    android:textStyle="italic" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="@color/divider" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="@color/divider" />

                <Button
                    android:id="@+id/delete"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:onClick="deleteDetail"
                    android:text="@string/delete"
                    android:textStyle="italic" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    
    <FrameLayout
        android:id="@+id/keypad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

	
</LinearLayout>
    