<FrameLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="@color/divider"
            android:orientation="horizontal"
            android:showDividers="middle" >

            <Button
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:onClick="editListable"
                android:text="@string/edit_listable"
                android:textStyle="italic" />

            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:onClick="deleteListable"
                android:text="@string/delete_listable"
                android:textStyle="italic" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/divider" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="@color/divider"
            android:orientation="horizontal"
            android:showDividers="middle" >

            <Button
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:onClick="newListable"
                android:text="@string/new_listable"
                android:textStyle="italic" />

            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:onClick="copyListable"
                android:text="@string/copy_listable"
                android:textStyle="italic" />
        </LinearLayout>

        <ListView
            android:id="@android:id/list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/undobar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:divider="@color/lt_grey" 
		android:showDividers="middle"
        android:dividerPadding="8dp"
        android:layout_gravity="bottom|center_horizontal"
		android:layout_margin="20dp"
		android:background="@color/grey"
        android:visibility="gone" >   

        <TextView
            android:id="@+id/undo_message"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="8dp"
            android:gravity="center"
            android:shadowColor="#000000"
            android:shadowRadius="2.75" />
        
        <Button
            android:id="@+id/undo_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/undo"
            android:textStyle="italic"
            android:onClick="handleUndo"
            style="?android:attr/buttonBarButtonStyle" />
     </LinearLayout>
        

</FrameLayout>